--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -7,8 +7,11 @@ on:
     branches: [ "main", "develop" ]
 
 jobs:
+  # ─────────────────────────────────────────────────────────
+  # Phase 1: コード解析（エラーのみ失敗）
+  # ─────────────────────────────────────────────────────────
   analyze:
-    name: Flutter Analyze (Phase 1 – warn on issues)
+    name: "Phase 1 – flutter analyze"
     runs-on: ubuntu-latest
 
     steps:
@@ -34,8 +37,8 @@ jobs:
             exit 1
           fi
           echo "✅ flutter analyze: No errors found."
-          WARNINGS=$(grep -c "^warning " analyze_output.txt || true)
-          INFOS=$(grep -c "^   info " analyze_output.txt || true)
+          WARNINGS=$(grep -c "^  warning " analyze_output.txt || true)
+          INFOS=$(grep -c "^  info " analyze_output.txt || true)
           echo "📊 Warnings: ${WARNINGS}, Info: ${INFOS}"
 
       - name: Upload analyze output
@@ -44,4 +47,57 @@ jobs:
         with:
           name: flutter-analyze-output
           path: analyze_output.txt
+          retention-days: 7
+
+  # ─────────────────────────────────────────────────────────
+  # Phase 2: Android Debug ビルド（analyze 成功後のみ実行）
+  # ─────────────────────────────────────────────────────────
+  build_android:
+    name: "Phase 2 – Android Debug Build"
+    runs-on: ubuntu-latest
+    needs: analyze
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "17"
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.35.4"
+          channel: "stable"
+          cache: true
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build Android Debug APK
+        run: |
+          flutter build apk --debug \
+            --dart-define=debugShowCheckedModeBanner=false
+          echo "✅ Android Debug APK ビルド成功"
+
+      - name: Show APK info
+        run: |
+          APK_PATH="build/app/outputs/flutter-apk/app-debug.apk"
+          if [ -f "$APK_PATH" ]; then
+            SIZE=$(du -sh "$APK_PATH" | cut -f1)
+            echo "📦 APK サイズ: $SIZE"
+            echo "📍 APK パス: $APK_PATH"
+          else
+            echo "⚠️ APK ファイルが見つかりません"
+            exit 1
+          fi
+
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-debug-apk
+          path: build/app/outputs/flutter-apk/app-debug.apk
           retention-days: 7
