--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -7,96 +7,90 @@ on:
     branches: [ "main", "develop" ]
 
 jobs:
-  # ─────────────────────────────────────────────────────────
-  # Phase 1: コード解析（エラーのみ失敗）
-  # ─────────────────────────────────────────────────────────
   analyze:
     name: "Phase 1 – flutter analyze"
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.35.4"
           channel: "stable"
           cache: true
-
-      - name: Install dependencies
-        run: flutter pub get
-
+      - run: flutter pub get
       - name: Run flutter analyze
         run: |
           flutter analyze --no-fatal-warnings --no-fatal-infos 2>&1 | tee analyze_output.txt
           if grep -q "^  error " analyze_output.txt; then
-            echo "❌ flutter analyze: ERROR found. Fix errors before merging."
-            grep "^  error " analyze_output.txt
-            exit 1
+            echo "❌ ERROR found"; grep "^  error " analyze_output.txt; exit 1
           fi
-          echo "✅ flutter analyze: No errors found."
-          WARNINGS=$(grep -c "^  warning " analyze_output.txt || true)
-          INFOS=$(grep -c "^  info " analyze_output.txt || true)
-          echo "📊 Warnings: ${WARNINGS}, Info: ${INFOS}"
-
-      - name: Upload analyze output
+          echo "✅ No errors found."
+          echo "📊 Warnings: $(grep -c '^  warning ' analyze_output.txt || true), Info: $(grep -c '^  info ' analyze_output.txt || true)"
+      - uses: actions/upload-artifact@v4
         if: always()
-        uses: actions/upload-artifact@v4
         with:
           name: flutter-analyze-output
           path: analyze_output.txt
           retention-days: 7
 
-  # ─────────────────────────────────────────────────────────
-  # Phase 2: Android Debug ビルド（analyze 成功後のみ実行）
-  # ─────────────────────────────────────────────────────────
-  build_android:
-    name: "Phase 2 – Android Debug Build"
+  unit_test:
+    name: "Phase 2 – flutter test"
     runs-on: ubuntu-latest
     needs: analyze
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          java-version: "17"
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.35.4"
           channel: "stable"
           cache: true
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build Android Debug APK
+      - run: flutter pub get
+      - name: Run unit tests
         run: |
-          flutter build apk --debug \
-            --dart-define=debugShowCheckedModeBanner=false
-          echo "✅ Android Debug APK ビルド成功"
+          flutter test \
+            test/logic/image_diff_manager_test.dart \
+            test/domain/image_item_test.dart \
+            test/presentation/detail_picker_helpers_test.dart \
+            test/services/image_cache_service_test.dart \
+            --reporter expanded 2>&1 | tee test_output.txt
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: flutter-test-output
+          path: test_output.txt
+          retention-days: 7
 
+  build_android:
+    name: "Phase 3 – Android Debug Build"
+    runs-on: ubuntu-latest
+    needs: unit_test
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "17"
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts', '**/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.35.4"
+          channel: "stable"
+          cache: true
+      - run: flutter pub get
+      - name: Build Android Debug APK
+        run: flutter build apk --debug --dart-define=debugShowCheckedModeBanner=false
       - name: Show APK info
         run: |
-          APK_PATH="build/app/outputs/flutter-apk/app-debug.apk"
-          if [ -f "$APK_PATH" ]; then
-            SIZE=$(du -sh "$APK_PATH" | cut -f1)
-            echo "📦 APK サイズ: $SIZE"
-            echo "📍 APK パス: $APK_PATH"
-          else
-            echo "⚠️ APK ファイルが見つかりません"
-            exit 1
-          fi
-
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
+          APK="build/app/outputs/flutter-apk/app-debug.apk"
+          [ -f "$APK" ] && echo "📦 $(du -sh $APK | cut -f1)" || (echo "⚠️ APK not found"; exit 1)
+      - uses: actions/upload-artifact@v4
         with:
           name: android-debug-apk
           path: build/app/outputs/flutter-apk/app-debug.apk
