fix: Major issues resolved - dynamic greeting, scanBarcode enabled, baseUrl cleanup, copyWith added, pubspec description updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: measure_master
-description: "A new Flutter project."
+description: "衣類の採寸・撮影・出品管理を一元化するプロフェッショナル向けアプリ。"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
