✨ ダッシュボード円グラフ実装 & photographed_by対応
🎨 新機能:
- DashboardPieCharts ウィジェット実装（リファクタリング版）
  - 本人とチーム全体の円グラフをカテゴリ別表示
  - 共通化されたセクション/凡例生成メソッド
  - カラーパレット定数化、ネスト深度削減

- photographed_by フィールドにユーザー名保存
  - DashboardScreen で displayName 取得
  - AddItemScreen → DetailScreen にユーザー名引き継ぎ
  - InventorySaver でユーザー名を D1 に保存

📊 API追加:
- getUserTodayStatsByCategory: 本人の当日登録商品カテゴリ別集計
- getTeamTodayStatsByCategory: チーム全体の当日登録商品カテゴリ別集計

🔧 技術改善:
- fl_chart 0.69.2 追加
- JST タイムスタンプ統一（DateTimeUtils）
- コード重複削減（50%↓）、保守性向上

Workers対応: team-stats エンドポイント GROUP BY category 実装済み

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.3.1
   photo_view: ^0.15.0
   mobile_scanner: ^6.0.2
+  fl_chart: 0.69.2  # 📊 円グラフ表示用
   
   # Firebase packages (LOCKED versions for stability)
   firebase_core: 3.6.0               # Firebase Core SDK
